Added more missing properties, took values from sunburst.

--- a/plonetheme/bootstrap/skins/plonetheme_bootstrap_styles/base_properties.props
+++ b/plonetheme/bootstrap/skins/plonetheme_bootstrap_styles/base_properties.props
@@ -1,4 +1,14 @@
 plone_skin:string=Bootstrap Theme
 logoName:string=logo.png
-backgroundColor:string=transparent
+
 linkColor:string=inherit
+backgroundColor:string=transparent
+
+fontSmallSize:string=100%
+borderWidth:string=1px
+borderStyle:string=solid
+
+globalBorderColor:string=White
+globalBackgroundColor:string=#dddddd
+
+discreetColor:string=#76797c
