upgrade to use collective.js.bootstrap

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,5 +8,5 @@ auto-checkout=*
 [versions]
 plone.app.jquery = 1.7.2
 [sources]
-collective.js.bootstrap = git git@github.com:collective/collective.js.bootstrap.git
+collective.js.bootstrap = git git@github.com:toutpt/collective.js.bootstrap.git
 
