fix url in buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,8 +5,9 @@ package-name = plonetheme.bootstrap
 
 extensions=mr.developer
 auto-checkout=*
+
 [versions]
 plone.app.jquery = 1.7.2
-[sources]
-collective.js.bootstrap = git git@github.com:toutpt/collective.js.bootstrap.git
 
+[sources]
+collective.js.bootstrap = git git://github.com/toutpt/plonetheme.bootstrap.git pushurl=git@github.com:toutpt/collective.js.bootstrap.git
