Add travis integration and robotframework tests to generate screen captures on various Plone versions

--- a/base.cfg
+++ b/base.cfg
@@ -1,12 +1,18 @@
 [buildout]
 extends =
-    https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/travis-4.2.x.cfg
     https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
 
 package-name = plonetheme.bootstrap
+package-extras = [test]
 
 extensions=mr.developer
 auto-checkout=*
+
+allow-hosts +=
+    robotframework.googlecode.com
+    robotframework-ride.googlecode.com
+    code.google.com
 
 [sources]
 collective.js.bootstrap = git git://github.com/toutpt/plonetheme.bootstrap.git pushurl=git@github.com:toutpt/collective.js.bootstrap.git
