--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,13 @@ env:
 python:
   - 2.7
 install:
-  - sed -ie "s#travis-4.x.cfg#travis-$PLONE_VERSION.x.cfg#" travis.cfg
+  - sed -ie "s#test-4.x.cfg#test-$PLONE_VERSION.x.cfg#" base.cfg
+  - cat travis.cfg # debug
   - mkdir -p buildout-cache/eggs
   - mkdir -p buildout-cache/downloads
-  - python bootstrap.py -c travis.cfg
-  - bin/buildout -N -t 3 -c travis.cfg install download install
-  - bin/buildout -N -t 3 -c travis.cfg
+  - python bootstrap.py -c base.cfg
+  - bin/buildout -N -t 3 -c base.cfg install download install
+  - bin/buildout -N -t 3 -c base.cfg
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
