--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,16 +1,16 @@
 [buildout]
 extends =
-    https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
-    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
+    base.cfg
+parts +=
+    robot
 
-package-name = plonetheme.bootstrap
-
-extensions=mr.developer
-auto-checkout=*
-
-[sources]
-collective.js.bootstrap = git git://github.com/toutpt/plonetheme.bootstrap.git pushurl=git@github.com:toutpt/collective.js.bootstrap.git
-
-[versions]
-plone.app.jquery = 1.7.2
-
+[robot]
+recipe = zc.recipe.egg
+eggs =
+    ${test:eggs}
+    plone.app.robotframework[ride,speak,reload]
+scripts =
+    robot-server
+    robot
+    ride
+    pybot
