pin docutils: robotframework-selenium2library 1.1.0 requires 'docutils>=0.8.1'

--- a/base.cfg
+++ b/base.cfg
@@ -1,6 +1,6 @@
 [buildout]
 extends =
-    https://raw.github.com/collective/buildout.plonetest/master/travis-4.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/travis-4.0.x.cfg
     https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
 
 package-name = plonetheme.bootstrap
@@ -18,5 +18,6 @@ allow-hosts +=
 collective.js.bootstrap = git git://github.com/toutpt/plonetheme.bootstrap.git pushurl=git@github.com:toutpt/collective.js.bootstrap.git
 
 [versions]
+# robotframework-selenium2library 1.1.0 requires 'docutils>=0.8.1'
+docutils = 0.10
 plone.app.jquery = 1.7.2
-
