--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ script:
 after_script:
   - cd parts/test
   - tar cvjf artifacts.tar.bz2 .
-  - curl http://collective_artifacts.rr.nu/submit_artifacts   --form archive=@artifactstar.bz2 --form TRAVIS_JOB_ID=$TRAVIS_JOB_ID
+  - curl http://collective_artifacts.rr.nu/submit_artifacts   --form archive=@artifacts.tar.bz2 --form TRAVIS_JOB_ID=$TRAVIS_JOB_ID
