buildout fixes, cleanups

--- a/base.cfg
+++ b/base.cfg
@@ -15,7 +15,7 @@ allow-hosts +=
     code.google.com
 
 [sources]
-collective.js.bootstrap = git git://github.com/toutpt/plonetheme.bootstrap.git pushurl=git@github.com:toutpt/collective.js.bootstrap.git
+collective.js.bootstrap = git git@github.com:collective/collective.js.bootstrap.git
 
 [versions]
 # robotframework-selenium2library 1.1.0 requires 'docutils>=0.8.1'
