--- a/base.cfg
+++ b/base.cfg
@@ -20,4 +20,5 @@ collective.js.bootstrap = git git@github.com:collective/collective.js.bootstrap.
 [versions]
 # robotframework-selenium2library 1.1.0 requires 'docutils>=0.8.1'
 docutils = 0.10
-plone.app.jquery = 1.7.2
+plone.app.jquery = 1.8.3
+plone.app.jquerytools = 1.5.6
