allow downloading eggs from plone and python hosts

--- a/base.cfg
+++ b/base.cfg
@@ -9,10 +9,12 @@ package-extras = [test]
 extensions=mr.developer
 auto-checkout=*
 
-allow-hosts +=
+allow-hosts =
     robotframework.googlecode.com
     robotframework-ride.googlecode.com
     code.google.com
+    *.plone.org
+    *.python.org
 
 [sources]
 collective.js.bootstrap = git git@github.com:collective/collective.js.bootstrap.git
