--- a/base.cfg
+++ b/base.cfg
@@ -24,3 +24,6 @@ collective.js.bootstrap = git git@github.com:collective/collective.js.bootstrap.
 docutils = 0.10
 plone.app.jquery = 1.8.3
 plone.app.jquerytools = 1.5.6
+
+# use bugfix version of selenium2 for newer versions of firefox
+selenium = 2.43.0
