allow anonymous access to collective.js.bootstrap in buildout

--- a/base.cfg
+++ b/base.cfg
@@ -10,7 +10,7 @@ extensions = mr.developer
 auto-checkout = *
 
 [sources]
-collective.js.bootstrap = git git@github.com:collective/collective.js.bootstrap.git
+collective.js.bootstrap = git git://github.com/collective/collective.js.bootstrap.git pushurl=git@github.com:collective/collective.js.bootstrap.git branch=master
 
 [versions]
 # robotframework-selenium2library 1.1.0 requires 'docutils>=0.8.1'
