codeanalysis on product not on 3rd party

--- a/base.cfg
+++ b/base.cfg
@@ -9,6 +9,9 @@ package-extras = [test]
 extensions = mr.developer
 auto-checkout = *
 
+[code-analysis]
+directory = plonetheme
+
 [sources]
 collective.js.bootstrap = git git://github.com/collective/collective.js.bootstrap.git pushurl=git@github.com:collective/collective.js.bootstrap.git branch=master
 
